force-app/main/default/objects/Advance_Payment__c/fields/Amount_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received_Date__c</fullName>
    <label>Amount Received Date</label>
    <type>Date</type>
</CustomField>