force-app/main/default/objects/Advance_Payment__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State Bank of India (SBI)</fullName>
            </value>
            <value>
                <fullName>HDFC Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Bajaj Housing</fullName>
            </value>
            <value>
                <fullName>ICICI Bank</fullName>
            </value>
            <value>
                <fullName>Kotak Mahindra Bank</fullName>
            </value>
            <value>
                <fullName>Axis Bank</fullName>
            </value>
            <value>
                <fullName>Punjab National Bank</fullName>
            </value>
            <value>
                <fullName>Indian Overseas Bank</fullName>
            </value>
            <value>
                <fullName>IndusInd Bank</fullName>
            </value>
            <value>
                <fullName>Union Bank of India</fullName>
            </value>
            <value>
                <fullName>Bank of India (BOI)</fullName>
            </value>
            <value>
                <fullName>Union Bank of India (UBI)</fullName>
            </value>
            <value>
                <fullName>Indian Bank</fullName>
            </value>
            <value>
                <fullName>Canara Bank</fullName>
            </value>
            <value>
                <fullName>IDFC First Bank</fullName>
            </value>
            <value>
                <fullName>Federal Bank</fullName>
            </value>
            <value>
                <fullName>Yes Bank</fullName>
            </value>
            <value>
                <fullName>RBL Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>