force-app/main/default/objects/Advance_Payment__c/fields/Booking_Request__c.field-meta.xml
<CustomField>
    <fullName>Booking_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Request</label>
    <referenceTo>Booking_Request__c</referenceTo>
    <relationshipLabel>Advance Payments</relationshipLabel>
    <relationshipName>Advance_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>