force-app/main/default/objects/Advance_Payment__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>on advance payment approval automatic mail sent to customer</description>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>