force-app/main/default/objects/Advance_Payment__c/fields/Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Receipt Date</label>
    <type>Date</type>
</CustomField>