force-app/main/default/objects/Advance_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cheque_Date__c</columns>
    <columns>Mode_of_Payment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>